# anka_trader

./: .gitignore  BROKER_INTEGRATION.md  DATA_INGESTION.md  DATA_PROVIDERS.md  EXPERIMENTS.md  EXPERIMENT_WORKFLOW.md  README.md  RL_INTEGRATION.md  RL_TRAINING.md  STRATEGY_LOG.md  pyproject.toml  requirements-dashboard.txt  streamlit_app.py  test_config.py  test_strategy_config.py
config/: README.md  alerts.yaml.example  broker.yaml  broker.yaml.example  orchestrator.yaml  providers.yaml  rl_training.yaml
docs/: broker_integration.md  experiment_templates.md  promotion_workflow.md  research_engine.md  strategy_config.md  strategy_promotion.md
examples/: daemon_with_broker_example.py  rl_ensemble_integration.py
experiments/: README.md  ablation_analysts.yaml  baseline_v1_grid.yaml  news_weight_sweep.yaml  param_sweep_baseline.yaml  risk_model_ablation.yaml  smoke_test.yaml
grids/: ablation_analysts.yaml  baseline_grid.yaml  param_sweep_baseline.yaml  regime_focus_crisis.yaml  robustness_risk.yaml
otonom_trader/: .gitignore  CHANGELOG_P3.md  DAEMON_GUIDE.md  README.md  otonom_trader_daemon.py  requirements.txt  setup.py
otonom_trader/otonom_trader/: __init__.py  cli.py  cli_backtest.py  cli_experiments.py  cli_research.py  cli_rl.py  cli_strategy.py  config.py  orchestrator.py
otonom_trader/otonom_trader/alerts/: __init__.py  engine.py  notifier.py
otonom_trader/otonom_trader/analytics/: __init__.py  analyst_news.py  analyst_risk.py  anomaly.py  calendar_client.py  dsi.py  labeling.py  llm_agent.py  news_client.py  regime.py  resolvers.py  returns.py
otonom_trader/otonom_trader/broker/: __init__.py  base.py  binance.py  factory.py  guarded.py
otonom_trader/otonom_trader/data/: db.py  (+8 more)
otonom_trader/scripts/: migrate_p2_ensemble.py  migrate_p2_ensemble.sql  run_full_pipeline.py
otonom_trader/tests/: __init__.py  test_anomaly_detection.py  test_backtest.py  test_data_ingest.py  test_dsi.py  test_ensemble.py  test_patron_rules.py  test_regime.py
scripts/: example_multi_analyst_ensemble.py  promote_experiment_simple.py  promote_experiment_to_strategy.py  run_grid_search.py  run_incremental_ingest.py  run_initial_ingest.py  run_research_backtests.py  train_rl_agent.py
strategies/: README.md  TEMPLATE.yaml  baseline_v1.0.yaml  baseline_v1.yaml  baseline_v2.yaml
(+75 files in other folders)
